# DoAnWeb

./: .dockerignore  .gitignore  CNAME  ChonRap.html  ChonRap_style.css  DatVe.html  DoAnWeb.code-workspace  KhuyenMai.html  KhuyenMai_style.css  LienHeNgay.py  README.md  ThueSuKien.html  ThueSuKien_LienHeNgayForm.html  ThueSuKien_LienHeNgayForm_style.css  ThueSuKien_style.css  fly.toml  index.html  index2.html  pyproject.toml  requirements.txt  script.js  style.css  style4.css  test.html
app/: forms.py  server.py
app/static/css/: ChonRap_style.css  KhuyenMai_style.css  ThueSuKien_style.css  style.css  style2.css  style3.css  user_style.css
app/static/js/: responsive_for_header-tablet.js
app/templates/: ChonRap.html  ThueSuKien.html  ThueSuKienLienHeNgayForm.html  admin.html  index.html  index2.html  search.html  signin.html  user.html
src/ci9ma/: forms.py  server.py
src/ci9ma/static/css/: ChonRap_style.css  KhuyenMai_style.css  responsize.css  style.css  style2.css  style_signin.css  user_style.css
src/ci9ma/static/js/: responsive_for_header-mobile.js  test.js
src/ci9ma/templates/: KhuyenMai.html  admin.html  index.html  index2.html  signin.html  user.html  user1.html
static/css/: ChonRap_style.css  style.css  style2.css
templates/: ChonRap.html  KhuyenMai.html  ThueSuKien.html  ThueSuKien_LienHeNgayForm.html  index.html  index2.html  test.html
